text and footer to be fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,18 +13,38 @@ ul {
   text-decoration: none;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  /* align-items: center; */
 }
 .page {
   display: flex;
+  gap: 100px;
 }
 .main {
   display: flex;
   flex-direction: column;
 }
 .login {
+  background-clip: border-box;
   background-color: #1c5380;
-  overflow-x: visible;
+  padding: 50px;
+  height: 250px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: right;
+  margin-bottom: -100px;
+  overflow-x: none;
+}
+.login ul {
+  gap: 40px;
+  padding-right: 200px;
+}
+.log-button {
+  border-left: 30px;
+  border-radius: 5px;
+  width: auto;
+  color: white;
+  background-color: #1c5380;
 }
 .text-section {
   background-image: url("/lab-css-instagram-clone/images/frame.png");
@@ -32,27 +52,40 @@ ul {
   background-size: cover;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  padding: 20px;
+  padding: 50px;
   text-align: left;
+  letter-spacing: 0.5px;
+  word-spacing: 0.5px;
   margin-right: 80px;
+  white-space: wrap;
+}
+.links {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  margin-top: 20px;
+}
+.links img {
+  border: none;
 }
 .iphone {
   display: flex;
   margin-right: 40px;
   margin-left: 80px;
-  margin-top: 80px;
+  margin-top: -150px;
 }
 h1 {
   color: #06365f;
 }
 
 .foot {
-  display: flex;
-  align-content: center;
 }
 a {
   text-decoration: none;
   color: #1c5380;
   font-size: larger;
+}
+
+quote {
+  color: gray;
 }
