--- a/styles/style.css
+++ b/styles/style.css
@@ -8,13 +8,12 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
-ul {
+/* ul {
   list-style: none;
   text-decoration: none;
   display: flex;
   flex-direction: row;
   /* align-items: center; */
-}
 .page {
   display: flex;
   gap: 100px;
@@ -38,6 +37,10 @@ ul {
 .login ul {
   gap: 40px;
   padding-right: 200px;
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
 }
 .log-button {
   border-left: 30px;
@@ -59,6 +62,12 @@ ul {
   margin-right: 80px;
   white-space: wrap;
 }
+.text-section ul {
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+}
 .links {
   display: flex;
   list-style: none;
@@ -77,14 +86,29 @@ ul {
 h1 {
   color: #06365f;
 }
+footer .foot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-.foot {
+  padding: 20px;
+  bottom: 0;
 }
-a {
+.foot ul {
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  font-size: larger;
+}
+
+/* a {
   text-decoration: none;
   color: #1c5380;
   font-size: larger;
-}
+} */
 
 quote {
   color: gray;
